MOON-104: Fix menu overflow with Safari (#125)

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -14,7 +14,8 @@
     list-style: none;
     background-color: var(--color-light);
     box-shadow: 0 4px 8px var(--color-gray_dark60);
-    overflow: hidden auto;
+    overflow-x: hidden; // Shorten property doesn't work with Safari
+    overflow-y: auto;
 
     &.hidden {
         opacity: 0;
